<resources>
    <string name="app_name">TravelTracker</string>
    <string name="Paises_Bajos">Paises Bajos</string>
    <string name="Belgica">Bélgica</string>
    <string name="Francia">Francia</string>
    <string name="Republica_Checa">República Checa</string>
    <string name="Ukrania">Ucrania</string>
    <string name="Bielorrusia">Bielorrusia</string>
    <string name="Eslovaquia">Eslovaquia</string>
    <string name="Austria">Austria</string>
    <string name="Rumania">Rumanía</string>
    <string name="Hungria">Hungría</string>
    <string name="Italia">Italia</string>
    <string name="Moldavia">Moldavia</string>
    <string name="Espana">España</string>
    <string name="Alemania">Alemania</string>
    <string name="Polonia">Polonia</string>
    <string name="Irlanda">Irlanda</string>
    <string name="Lituania">Lituania</string>
    <string name="Letonia">Letonia</string>
    <string name="Reino_Unido">Reino Unido</string>
    <string name="Estonia">Estonia</string>
    <string name="Islandia">Islandia</string>
    <string name="Suecia">Suecia</string>
    <string name="Finlandia">Finlandia</string>
    <string name="Noruega">Noruega</string>
    <string name="Serbia">Serbia</string>
    <string name="Groenlandia">Groenlandia\n</string>
    <string name="Croacia">Croacia\n</string>
    <string name="Turquia">Turquia\n</string>
    <string name="Portugal">Portugal</string>
    <string name="China">China\n</string>
    <string name="Rusia">Rusia\n</string>
    <string name="Japon">Japon\n</string>
    <string name="Georgia">Georgia</string>
    <string name="Corea_del_Norte">Corea del Norte</string>
    <string name="Corea_del_Sur">Corea del Sur\n</string>
    <string name="Azerbaiyan">Azerbaiyan</string>
    <string name="Turkmenistan">Turkmenistan</string>
    <string name="Kirguistan">Kirguistan</string>
    <string name="Tayikistan">Tayikistan</string>
    <string name="Ubezkistan">Ubezkistan</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Kazajistan">Kazajistan\n</string>
    <string name="Iran">Iran</string>
    <string name="Irak">Irak</string>
    <string name="Afganistan">Afganistan</string>
    <string name="Siria">Siria</string>
    <string name="Pakistan">Pakistan</string>
    <string name="India">India\n</string>
    <string name="Israel">Israel</string>
    <string name="Arabia_Saudita">Arabia Saudita</string>
    <string name="Myanmar_Birmania">Myanmar (Birmania)</string>
    <string name="Emiratos_Arabes">Emiratos Arabes</string>
    <string name="Oman">Oman</string>
    <string name="Vietnam">Vietnam</string>
    <string name="Yemen">Yemen</string>
    <string name="Laos">Laos\n</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Nepal">Nepal</string>
    <string name="Butan">Butan</string>
    <string name="Camboya">Camboya</string>
    <string name="Tailandia">Tailandia</string>
    <string name="Malasia">Malasia</string>
    <string name="Filipinas">Filipinas</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Singapur">Singapur</string>
    <string name="Mexico">Mexico</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Republica_Dominicana">Republica Dominicana</string>
    <string name="Honduras">Honduras</string>
    <string name="Nicaragua">Nicaragua</string>
    <string name="Canada">Canada</string>
    <string name="Estados_Unidos">Estados Unidos</string>
    <string name="Sudafrica">Sudafrica</string>
    <string name="Botsuana">Botsuana</string>
    <string name="Namibia">Namibia</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Zimbabue">Zimbabue</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Zambia">Zambia</string>
    <string name="Malaui">Malaui</string>
    <string name="Angola">Angola</string>
    <string name="Tanzania">Tanzania</string>
    <string name="Uganda">Uganda</string>
    <string name="Congo">Congo</string>
    <string name="Gabon">Gabon</string>
    <string name="Chad">Chad</string>
    <string name="Niger">Niger</string>
    <string name="Mali">Mali</string>
    <string name="Burkina_Faso">Burkina Faso</string>
    <string name="Nigeria">Nigeria</string>
    <string name="Benin">Benin</string>
    <string name="Costa_De_Marfil">Costa de Marfil</string>
    <string name="Republica_Centroafricana">Republica Centroafricana</string>
    <string name="Ghana">Ghana</string>
    <string name="Somalia">Sommalia</string>
    <string name="Kenia">Kenia</string>
    <string name="Republica_Democratica_del_Congo">Republica Democratica del Congo</string>
    <string name="Liberia">Liberia</string>
    <string name="Camerun">Camerun</string>
    <string name="Guinea">Guinea</string>
    <string name="Gambia">Gambia</string>
    <string name="Etiopia">Etiopia</string>
    <string name="Eritrea">Eritrea</string>
    <string name="Senegal">Senegal\n</string>
    <string name="Sahara_Occidental">Sahara Occidental</string>
    <string name="Mauritania">Mauritania</string>
    <string name="Egipto">Egipto</string>
    <string name="Libia">Libia\n</string>
    <string name="Tunez">Tunez</string>
    <string name="Marruecos">Marruecos</string>
    <string name="Argelia">Argelia</string>
    <string name="Sudan">Sudan</string>
    <string name="Chile">Chile</string>
    <string name="Uruguay">Uruguay</string>
    <string name="Argentina">Argentina</string>
    <string name="Bolivia">Bolivia</string>
    <string name="Paraguay">Paraguay</string>
    <string name="Peru">Peru</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Surinam">Surinam</string>
    <string name="Guyana">Guyana</string>
    <string name="Colombia">Colombia</string>
    <string name="Venezuela">Venezuela</string>
    <string name="Brasil">Brasil</string>
    <string name="Guayana_Francesa">Guayana Francesa</string>
    <string name="Nueva_Zelanda">Nueva Zelanda</string>
    <string name="Australia">Australia</string>
    <string name="Papua_Nueva_Guinea">Papua Nueva Guinea</string>
    <string name="OpcionesText">Opciones</string>
    <string name="ModoOscuroText">Modo oscuro</string>
    <string name="textoOpcionesColores">Colores del mapa</string>
    <string name="PaisesVisitadosText">Países visitados</string>
    <string name="Visitando">Visitando</string>
    <string name="txtBtnSeleccionarColorVisitados">Seleccionar color</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="TemaText">Tema</string>
    <string name="PaisesPorVisitarText">Países por visitar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logoapp">LogoApp</string>
    <string name="register">REGISTER</string>
    <string name="pais">País</string>
    <string name="confirmPassword">Confirm</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="registrarse">Registrarse</string>
    <string name="ini_ses">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="ini_ses_button">INICIAR SESIÓN</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="confirmar_pass">Confirmar contraseña</string>
    <string name="pa_s_en_el_que_vives">País en el que vives</string>
    <string name="Verificado">Verificado\n</string>

        <string name="recomendacion_mes">Recomendación del mes</string>
        <string name="nombre_default">Nombre</string>
        <string name="sitios_interes">SITIOS INTERES</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="color_de_los_paises_visitados">Color de los países visitados.</string>
    <string name="pais_visitando">Color del país que estas visitando.</string>
    <string name="color_de_los_paises_que_has_visitado_y_verificado">Color de los países que has visitado y verificado.</string>
    <string name="opciones">Opciones</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="traveltracker">TravelTracker</string>
    <string name="visitando">Visitando</string>
    <string name="visitado">Visitado</string>
    <string name="verificar">Verificar</string>
    <string name="paises_visitados">Países visitados:</string>
    <string name="_0">0</string>
    <string name="paises_confirmados">Países confirmados:</string>
    <string name="ofertas">OFERTAS</string>
    <string name="explora_las_mejores_ofertas_de_vuelos">Explora las mejores ofertas de vuelos ✈️</string>
    <string name="recomendacion_del_mes">RECOMENDACIÓN DEL MES</string>
    <string name="nombre">Nombre</string>
    <string name="recomendaciones_en_la_zona">Recomendaciones en la zona:</string>
    <string name="destino">Destino</string>
    <string name="precio">Precio</string>
    <string name="eliminar">Eliminar</string>


</resources>