<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ini_ses"
        android:textSize="35sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/usuario"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:text="@string/ini_ses_button"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/lightblue" />

    <!-- Tres botones adicionales
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Continuar con Facebook"
        android:layout_marginBottom="8dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Continuar con Google"
        android:layout_marginBottom="8dp"/>
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/darkblue" />
</LinearLayout>
